Update tests due to pagination